tests/NormalTests/paczka1/fuzzy1/25084723.err
Error in line 21: vtQ3TUZh A952 138,2
Error in line 20: LPCF S501 42,7
Error in line 37: S501 A379 74,6
